# spokester1

./: .gitignore  README.md  pyproject.toml
conf/: base.yaml  pretrain_highres.yaml  pretrain_lowres.yaml
src/game/: auto_play.py  configuring_game_engine.py  game_engine.py
src/net/: configuring_net.py  configuring_video_data.py  data_pipeline.py  flow_matching.py  helpers.py  model_factory.py  net.py  optim.py  rotary_embeddings.py  supplemental_net.py  torch_utils.py  video_data.py
src/scripts/: create_game_trajectory_dataset.py  generate_sample_grid.py  play_game.py  play_game_with_neural_graphics.py  train_net.py  visualize_conditioning_videos.py
tests/: test_net.py
